# gitlab-cli

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
src/: api.rs  cli.rs  cmd.rs  config.rs  main.rs
src/api/: artifacts.rs  mod.rs  packages.rs  pipeline.rs  types.rs
src/client/: check.rs  client.rs  mod.rs
src/core/: mod.rs
src/core/artifacts/: cli.rs  handler.rs  mod.rs
src/core/pipeline/: cli.rs  handler.rs  mod.rs
